Add empty window example

--- a/FlopEngine/FlopEngine.vcxproj
+++ b/FlopEngine/FlopEngine.vcxproj
@@ -133,11 +133,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="3rdparty\json\json.hpp" />
+    <ClInclude Include="euler_fluid_simulator.hpp" />
     <ClInclude Include="examples\boids\boid.hpp" />
     <ClInclude Include="examples\boids\boids_window.hpp" />
     <ClInclude Include="examples\boids\flock.hpp" />
     <ClInclude Include="examples\delaunay\delaunay_triangulator.hpp" />
     <ClInclude Include="examples\delaunay\delaunay_window.hpp" />
+    <ClInclude Include="examples\euler_fluid_simulator\euler_fluid_window.hpp" />
     <ClInclude Include="examples\examples.hpp" />
     <ClInclude Include="examples\marching\marching_window.hpp" />
     <ClInclude Include="examples\pixel_grid\pixel_grid_window.hpp" />
@@ -186,11 +188,13 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="euler_fluid_simulator.cpp" />
     <ClCompile Include="examples\boids\boid.cpp" />
     <ClCompile Include="examples\boids\boids_window.cpp" />
     <ClCompile Include="examples\boids\flock.cpp" />
     <ClCompile Include="examples\delaunay\delaunay_triangulator.cpp" />
     <ClCompile Include="examples\delaunay\delaunay_window.cpp" />
+    <ClCompile Include="examples\euler_fluid_simulator\euler_fluid_window.cpp" />
     <ClCompile Include="examples\marching\marching_window.cpp" />
     <ClCompile Include="examples\pixel_grid\pixel_grid_window.cpp" />
     <ClCompile Include="examples\quadtree\quadtree_window.cpp" />
