--- a/FlopEngine/FlopEngine.vcxproj.filters
+++ b/FlopEngine/FlopEngine.vcxproj.filters
@@ -26,6 +26,8 @@
     <ClCompile Include="libs\gui\input_param_box.cpp" />
     <ClCompile Include="examples\euler_fluid_simulator\euler_fluid_window.cpp" />
     <ClCompile Include="euler_fluid_simulator.cpp" />
+    <ClCompile Include="examples\empty\empty_window.cpp" />
+    <ClCompile Include="examples\attraction\attraction_window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="geometry\edge.hpp" />
@@ -81,6 +83,8 @@
     <ClInclude Include="libs\gui\input_param_box.hpp" />
     <ClInclude Include="examples\euler_fluid_simulator\euler_fluid_window.hpp" />
     <ClInclude Include="euler_fluid_simulator.hpp" />
+    <ClInclude Include="examples\empty\empty_window.hpp" />
+    <ClInclude Include="examples\attraction\attraction_window.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
