--- a/FlopEngine/FlopEngine.vcxproj
+++ b/FlopEngine/FlopEngine.vcxproj
@@ -173,6 +173,10 @@
     <ClInclude Include="libs\marching\marching_grid_impl.hpp" />
     <ClInclude Include="libs\math\math.hpp" />
     <ClInclude Include="libs\geometry\rectangle.hpp" />
+    <ClInclude Include="libs\meta\base_same_as.hpp" />
+    <ClInclude Include="libs\meta\converter.hpp" />
+    <ClInclude Include="libs\meta\remove_all.hpp" />
+    <ClInclude Include="libs\meta\trait_convertible_to.hpp" />
     <ClInclude Include="libs\quadtree\quadtree.hpp" />
     <ClInclude Include="libs\quadtree\quadtree_const_iterator_impl.h" />
     <ClInclude Include="libs\quadtree\quadtree_help.hpp" />
@@ -180,10 +184,11 @@
     <ClInclude Include="libs\gui\split_layout.hpp" />
     <ClInclude Include="utils\agent.hpp" />
     <ClInclude Include="utils\blocker.hpp" />
-    <ClInclude Include="utils\concepts.hpp" />
+    <ClInclude Include="libs\meta\concepts.hpp" />
     <ClInclude Include="utils\file_observer.hpp" />
     <ClInclude Include="utils\fixed_size_queue.hpp" />
     <ClInclude Include="libs\grid\grid.hpp" />
+    <ClInclude Include="utils\physics_object_traits.hpp" />
     <ClInclude Include="utils\ranges.h" />
     <ClInclude Include="utils\singleton.hpp" />
     <ClInclude Include="utils\utils.hpp" />
