--- a/FlopEngine/FlopEngine.vcxproj.filters
+++ b/FlopEngine/FlopEngine.vcxproj.filters
@@ -40,7 +40,7 @@
     <ClInclude Include="libs\geometry\vector2.hpp" />
     <ClInclude Include="utils\agent.hpp" />
     <ClInclude Include="utils\blocker.hpp" />
-    <ClInclude Include="utils\concepts.hpp" />
+    <ClInclude Include="libs\meta\concepts.hpp" />
     <ClInclude Include="utils\file_observer.hpp" />
     <ClInclude Include="utils\singleton.hpp" />
     <ClInclude Include="utils\utils.hpp" />
@@ -85,6 +85,11 @@
     <ClInclude Include="euler_fluid_simulator.hpp" />
     <ClInclude Include="examples\empty\empty_window.hpp" />
     <ClInclude Include="examples\attraction\attraction_window.hpp" />
+    <ClInclude Include="utils\physics_object_traits.hpp" />
+    <ClInclude Include="libs\meta\remove_all.hpp" />
+    <ClInclude Include="libs\meta\base_same_as.hpp" />
+    <ClInclude Include="libs\meta\converter.hpp" />
+    <ClInclude Include="libs\meta\trait_convertible_to.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
