--- a/FlopEngine/FlopEngine.vcxproj.filters
+++ b/FlopEngine/FlopEngine.vcxproj.filters
@@ -3,11 +3,9 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="utils\agent.cpp" />
-    <ClCompile Include="utils\file_observer.cpp" />
     <ClCompile Include="libs\graphics\base_window.cpp" />
     <ClCompile Include="libs\graphics\drawing.cpp" />
     <ClCompile Include="libs\graphics\glut_functions.cpp" />
-    <ClCompile Include="libs\math\math.cpp" />
     <ClCompile Include="libs\gui\object.cpp" />
     <ClCompile Include="libs\gui\master.cpp" />
     <ClCompile Include="libs\gui\button.cpp" />
@@ -15,7 +13,6 @@
     <ClCompile Include="libs\gui\layout.cpp" />
     <ClCompile Include="libs\gui\split_layout.cpp" />
     <ClCompile Include="libs\gui\input_param_list.cpp" />
-    <ClCompile Include="examples\boids\boid.cpp" />
     <ClCompile Include="examples\boids\boids_window.cpp" />
     <ClCompile Include="examples\boids\flock.cpp" />
     <ClCompile Include="examples\delaunay\delaunay_triangulator.cpp" />
@@ -61,13 +58,12 @@
     <ClInclude Include="libs\gui\layout.hpp" />
     <ClInclude Include="libs\gui\split_layout.hpp" />
     <ClInclude Include="libs\gui\input_param_list.hpp" />
-    <ClInclude Include="utils\ranges.h" />
+    <ClInclude Include="utils\ranges.hpp" />
     <ClInclude Include="libs\quadtree\quadtree_implementation.hpp" />
-    <ClInclude Include="libs\quadtree\quadtree_const_iterator_impl.h" />
+    <ClInclude Include="libs\quadtree\quadtree_const_iterator_impl.hpp" />
     <ClInclude Include="utils\fixed_size_queue.hpp" />
-    <ClInclude Include="libs\marching\marching_grid.hpp" />
-    <ClInclude Include="libs\marching\marching_grid_impl.hpp" />
-    <ClInclude Include="examples\boids\boid.hpp" />
+    <ClInclude Include="libs\grid\marching_grid.hpp" />
+    <ClInclude Include="libs\grid\marching_grid_impl.hpp" />
     <ClInclude Include="examples\boids\boids_window.hpp" />
     <ClInclude Include="examples\boids\flock.hpp" />
     <ClInclude Include="examples\delaunay\delaunay_triangulator.hpp" />
@@ -85,11 +81,12 @@
     <ClInclude Include="euler_fluid_simulator.hpp" />
     <ClInclude Include="examples\empty\empty_window.hpp" />
     <ClInclude Include="examples\attraction\attraction_window.hpp" />
-    <ClInclude Include="utils\physics_object_traits.hpp" />
+    <ClInclude Include="libs\meta\physics_object_traits.hpp" />
     <ClInclude Include="libs\meta\remove_all.hpp" />
     <ClInclude Include="libs\meta\base_same_as.hpp" />
     <ClInclude Include="libs\meta\converter.hpp" />
     <ClInclude Include="libs\meta\trait_convertible_to.hpp" />
+    <ClInclude Include="examples\boids\boid.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
