--- a/FlopEngine/FlopEngine.vcxproj
+++ b/FlopEngine/FlopEngine.vcxproj
@@ -179,10 +179,11 @@
     <ClInclude Include="libs\meta\remove_all.hpp" />
     <ClInclude Include="libs\meta\trait_convertible_to.hpp" />
     <ClInclude Include="libs\quadtree\quadtree.hpp" />
-    <ClInclude Include="libs\quadtree\quadtree_const_iterator_impl.hpp" />
+    <ClInclude Include="libs\quadtree\quadtree_iterator_impl.hpp" />
     <ClInclude Include="libs\quadtree\quadtree_help.hpp" />
-    <ClInclude Include="libs\quadtree\quadtree_implementation.hpp" />
+    <ClInclude Include="libs\quadtree\quadtree_impl.hpp" />
     <ClInclude Include="libs\gui\split_layout.hpp" />
+    <ClInclude Include="libs\quadtree\quadtree_node_impl.hpp" />
     <ClInclude Include="utils\agent.hpp" />
     <ClInclude Include="utils\blocker.hpp" />
     <ClInclude Include="libs\meta\concepts.hpp" />
