--- a/FlopEngine/FlopEngine.vcxproj.filters
+++ b/FlopEngine/FlopEngine.vcxproj.filters
@@ -60,8 +60,8 @@
     <ClInclude Include="libs\gui\split_layout.hpp" />
     <ClInclude Include="libs\gui\input_param_list.hpp" />
     <ClInclude Include="utils\ranges.hpp" />
-    <ClInclude Include="libs\quadtree\quadtree_implementation.hpp" />
-    <ClInclude Include="libs\quadtree\quadtree_const_iterator_impl.hpp" />
+    <ClInclude Include="libs\quadtree\quadtree_impl.hpp" />
+    <ClInclude Include="libs\quadtree\quadtree_iterator_impl.hpp" />
     <ClInclude Include="utils\fixed_size_queue.hpp" />
     <ClInclude Include="libs\grid\marching_grid.hpp" />
     <ClInclude Include="libs\grid\marching_grid_impl.hpp" />
@@ -89,6 +89,7 @@
     <ClInclude Include="libs\meta\trait_convertible_to.hpp" />
     <ClInclude Include="examples\boids\boid.hpp" />
     <ClInclude Include="barnes_hut_solver.hpp" />
+    <ClInclude Include="libs\quadtree\quadtree_node_impl.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
