--- a/FlopEngine/FlopEngine.vcxproj.filters
+++ b/FlopEngine/FlopEngine.vcxproj.filters
@@ -88,8 +88,9 @@
     <ClInclude Include="libs\meta\converter.hpp" />
     <ClInclude Include="libs\meta\trait_convertible_to.hpp" />
     <ClInclude Include="examples\boids\boid.hpp" />
-    <ClInclude Include="barnes_hut_solver.hpp" />
     <ClInclude Include="libs\quadtree\quadtree_node_impl.hpp" />
+    <ClInclude Include="examples\attraction\barnes_hut_solver.hpp" />
+    <ClInclude Include="libs\meta\range_of.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
